@@ -92,6 +92,13 @@ the extracted folder and compile/install TA-Lib with the sequence</p>
     (as root).</p>
   </li>
 </ol>
+<p>
+If you installed TA-Lib at a non-standard location, then edit the
+Qtstalker "configure" file (e.g. "<code>INCLUDEPATH += /opt/local/include/ta-lib</code>").
+</p>
+<p>
+Also ensure that the '<code>ta-lib-config</code>' program is available on your $PATH
+</p>
 
 <h4>Install Qtstalker</h4>
 
