@@ -5,3 +5,5 @@
 20071010: Improved the docs with deliberately basic CSS. Thanks to xley.
 
 20071018: The "Auto Reload" of the CSV Quote plugin was not working. Thanks to xley.
+
+20071023: Improved installation doc to warn about non-standard installation of TA-Lib. Thanks to xley.
